--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <!-- Header -->
-    <include src="./header.html"></include>
+    <!-- <include src="./header.html"></include> -->
 
     <!-- Home Section  -->
     <section class="home" id="home">
