--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <!--bootstrap-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script> 
-       <script src="https://unpkg.com/htmlincludejs"></script>
-    <title>My Personal Portfolio</title>
+     <title>My Personal Portfolio</title>
     <!-- Main CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-
 <body>
     <!-- Header -->
-    <!-- <include src="./header.html"></include> -->
-
+    <header id="header" class="header">
+        <div class="menu-icon-container">
+            <i class="fas fa-bars" id="menu-icon"></i>
+        </div>
+        <div class="logo">PORTFOLIO.</div>
+        <nav class="navbar">
+            <a href="#home" class="active">Home</a>
+            <a href="#about">About</a>
+            <a href="#services">Services</a>
+            <a href="#portfolio">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
     <!-- Home Section  -->
     <section class="home" id="home">
         <div class="home-content">
