--- a/index.html
+++ b/index.html
@@ -115,12 +115,7 @@
                     <a href="https://github.com/Paaraskevi/FitHorizon" class="btn1">See more</a>
                 </div>
             </div>
-            <div class="portfolio-box">
-                <img src="assets/images/logo.png" alt="">
-                <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                </div>
-            </div>
+          
         </div>
     </section>
     
@@ -129,7 +124,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
         <form action="https://api.web3forms.com/submit" method="POST" id="form">
-            <input type="hidden" name="access_key" value="b48fc2e6-bb12-42cb-bcc3-98f8788bc6de" />
+            <input type="hidden" name="apikey" value="b48fc2e6-bb12-42cb-bcc3-98f8788bc6de" />
 
             <div class="input-box">
                 <input type="text" name="fullName" placeholder="Full Name">
