--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="logo">PORTFOLIO.</div>
         <nav class="navbar">
             <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Projects</a>
-            <a href="#contact">Contact</a>
+            <a href="#about" class="active">About</a>
+            <a href="#services"class="active">Services</a>
+            <a href="#portfolio"class="active">Projects</a>
+            <a href="#contact"class="active">Contact</a>
         </nav>
     </header>
     <!-- Home Section  -->
@@ -106,13 +106,25 @@
             <div class="portfolio-box">
                 <img src="assets/images/logo.png" alt="">
                 <div class="portfolio-layer">
-                    <a href="https://github.com/Paaraskevi/Upnews" class="btn1">See more</a>
+                    <h2>UpNews</h2>
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <a href="https://github.com/Paaraskevi/Upnews">Click me</a>
                 </div>
             </div>
             <div class="portfolio-box">
                 <img src="assets/images/logo.png" alt="">
                 <div class="portfolio-layer">
-                    <a href="https://github.com/Paaraskevi/FitHorizon" class="btn1">See more</a>
+                    <h2>FitHorizon</h2>
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <a href="https://github.com/Paaraskevi/FitHorizon">Click me</a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="assets/images/logo.png" alt="">
+                <div class="portfolio-layer">
+                    <h2>MVC</h2>
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <a href="https://github.com/Paaraskevi/FitHorizon">Click me</a>
                 </div>
             </div>
           
@@ -124,7 +136,7 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
         <form action="https://api.web3forms.com/submit" method="POST" id="form">
-            <input type="hidden" name="apikey" value="b48fc2e6-bb12-42cb-bcc3-98f8788bc6de" />
+            <input type="hidden" name="apikey" value="b48fc2e6-bb12-42cb-bcc3-98f8788bc6de" />            
 
             <div class="input-box">
                 <input type="text" name="fullName" placeholder="Full Name">
