--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="portfolio-layer">
                     <h2>MVC</h2>
                     <i class="fa-solid fa-arrow-up"></i>
-                    <a href="https://github.com/Paaraskevi/FitHorizon">Click me</a>
+                    <a href="https://github.com/Paaraskevi/mvc">Click me</a>
                 </div>
             </div>
           
