--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
             <div class="social-media">
                 <a href="https://www.facebook.com/profile.php?id=100022614636397"><i class="fab fa-facebook"></i></a>
                 <a href="https://github.com/Paaraskevi"><i class="fab fa-github"></i></a>
-                <a href="www.linkedin.com/in/eva-asprou-8a38831a9"><i class="fab fa-linkedin"></i></a>
+                <a href="www.linkedin.com/in/paraskevi-asprou-8a38831a9"><i class="fab fa-linkedin"></i></a>
             </div>
-            <a href="assets/files/CV_Asprou_Paraskevi.pdf" download class="btn">Download CV</a>
+            <a href="assets/files/CV_Paraskevi_Asprou.pdf" download class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="assets/images/image1.jpg" class="rounder-circle">
@@ -56,7 +56,7 @@
         </div>
         <div class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
-            <h3>Full Stack Web development</h3>
+            <h3>Full Stack Web Developer</h3>
             <p>
                 With little experience in the IT field, looking<br> for a challenging position
                 where I can utilize my knowledge and skills.
@@ -96,7 +96,18 @@
                 <i class="fa-brands fa-js"></i>
                 <h3>JavaScript</h3>
             </div>
-
+            <div class="services-box">
+                <i class="fa-brands fa-angular"></i>
+                <h3>Angular</h3>
+            </div>
+            <div class="services-box">
+                    <i class="fa-solid fa-code"></i>
+                    <h3>TypeScript</h3>
+            </div>
+                <div class="services-box">
+                    <i class="fa-brands fa-microsoft"></i>
+                    <h3>.NET</h3>
+                </div>
         </div>
     </section>
     <!--Projects section-->
@@ -127,7 +138,14 @@
                     <a href="https://github.com/Paaraskevi/mvc">Click me</a>
                 </div>
             </div>
-          
+            <div class="portfolio-box">
+                <img src="assets/images/logo.png" alt="">
+                <div class="portfolio-layer">
+                    <h2>THESIS DAPP</h2>
+                    <i class="fa-solid fa-arrow-up"></i>
+                    <a href="https://github.com/Paaraskevi/UniwaDappDrive">Click me</a>
+                </div>
+            </div>
         </div>
     </section>
     
